CAWeb 1.10.6a
- Added restricted_data_processing to GA options

CAWeb 1.10.6
- Fixed issue with certain CAWeb Options not escaping/sanitizing properly
- Removed unique version number from custom css/js
- Fixed issue with automatic conversion of false to array when retrieving widget news feeds
- Fixed issue with array to string conversion in CAWeb Module class
- Updated Alert Banner text and color for the Display option
 
CAWeb 1.10.5
- Update Twitter logo to X
- Removed wildcard from GA samesite attribute 
- Fixed a11y with WPForms Date/Time pickers

CAWeb 1.10.4
- Added defer and crossorigin attributes to statewide alert script
- Fixed Powered by alignment
- Fixed issue with sidebar when in mobile

CAWeb 1.10.3
- Fixed issue with Toggle/Accordions no toggling correctly with enter key
- Updated GA4 code
- Added new CA Statewide Alert option
- Fixed issues with module padding

CAWeb 1.10.2
- Fixed issue with Live Drafts option being reset

CAWeb 1.10.1
- Fixed issue with broken reference to default fav icon
- Resize CA.gov logo for v6
- Spelled out Back to top for v6
- Added new body, page container, main content class options
- Removed Settings Button for v6
- Fixed issues with Google Translate when in Custom mode
- Updated Google Analytics code

CAWeb 1.10.0
- Introduced State Template Version 6
- Removed Design System Option 
- Fixed a11y issue in utility header
- Fixed issue with Organization Logo Alt Text not populating correct text
- Fixed tab index for search
- Fixed content/header alignment 

CAWeb 1.9.0
- Fixed issues related to version 6:
  Site navigation
  Updated  CA.gov icon
  Added Official Website statement
  Updated search
  Updated available Social Icons
  Updated Copyright notice in footer
  Added new icons
  Removed Sticky Navigation Option
  Removed Home link option
  Removed Geo locator option
  Removed Menu home link option
  Updated Powered by CAWebPublishing alignment in footer

CAWeb 1.8.1
- Added Web Headers for X-Content-Type-Options