@@ -1,7 +1,7 @@
 /******/ (() => { // webpackBootstrap
 /******/ 	var __webpack_modules__ = ({
 
-/***/ 38:
+/***/ 37:
 /***/ (() => {
 
 /* CAWeb Icon Menu Javascript */
@@ -40,7 +40,7 @@ jQuery(document).ready(function($) {
 
 /***/ }),
 
-/***/ 41:
+/***/ 40:
 /***/ (() => {
 
 // Toggle CAWeb Template Options
@@ -139,7 +139,7 @@ jQuery( document ).ready( function($) {
 
 /***/ }),
 
-/***/ 55:
+/***/ 54:
 /***/ (() => {
 
 jQuery( document ).ready( function($) {
@@ -219,10 +219,10 @@ jQuery( document ).ready( function($) {
 var __webpack_exports__ = {};
 // This entry need to be wrapped in an IIFE because it need to be isolated against other modules in the chunk.
 (() => {
-__webpack_require__(38);
-__webpack_require__(41);
+__webpack_require__(37);
+__webpack_require__(40);
 
-__webpack_require__(55);
+__webpack_require__(54);
 
 })();
 
