@@ -1,36 +1,0 @@
-// Google Tag Manager
-jQuery(document).ready(function($) {
-	window.dataLayer = window.dataLayer || [];
-
-	function gtag(){dataLayer.push(arguments);}
-
-	gtag('js', new Date());
-
-	if( undefined !== args.ca_google_analytic4_id){
-		gtag('config', args.ca_google_analytic4_id, {cookie_flags:'secure;samesite=lax;domain=', 'restricted_data_processing':true }); // individual agency - either from your own google account, or contact eServices to have one set up for you
-	}
-
-	gtag('config', 'G-69TD0KNT0F', {cookie_flags:'secure;samesite=lax;domain=', 'restricted_data_processing':true }); // statewide analytics - do not remove or change
-
-	if( undefined !== args.caweb_multi_ga4 ){
-		gtag('config', args.caweb_multi_ga4, {cookie_flags:'secure;samesite=lax;domain=', 'restricted_data_processing':true }); // CAWeb multisite analytics - do not remove or change
-	}
-		
-	var getOutboundLink = function(url) {
-		gtag('event', 'click', {
-			'event_category': 'navigation',
-			'event_label': 'outbound link: ' + url,
-			'transport_type': 'beacon',
-			'event_callback': function(){document.location = url;}
-		});
-	}
-
-	var trackDownload = function(filename) {
-		gtag('event', 'click', {
-			'event_category': 'download',
-			'event_label': 'file: ' + filename,
-			'transport_type': 'beacon',
-			'event_callback': function(){document.location = url;}
-		});
-	}
-});
