@@ -1,4 +1,3 @@
 //require('./AutoTracker');
 require('./cse');
 require('./ga');
-require('./gtag');
