@@ -1,5 +1,6 @@
 CAWeb 1.10.6a
 - Added restricted_data_processing to GA options
+- Combined GA and GTAG scripts into one
 
 CAWeb 1.10.6
 - Fixed issue with certain CAWeb Options not escaping/sanitizing properly
